# sum_type_practice_cpp

./: meson.build  readme.md
src/: evaluate.cpp  evaluate.hpp  expr.cpp  expr.hpp  main.cpp  misc.hpp  parse.cpp  parse.hpp  token.hpp  tokenize.cpp  tokenize.hpp
test/: test_evaluate.cpp  test_expr.cpp
